# influxdb-rs

./: .dockerignore  .gitignore  .travis.yml  Cargo.toml  Dockerfile  LICENSE  README.md  docker-compose.yml
benches/: io_bench.rs
examples/: simple.rs
src/: client.rs  error.rs  lib.rs  serialization.rs
src/api/: mod.rs  query.rs
src/data_model/: authorization.rs  bucket.rs  data_points.rs  file.rs  labels.rs  links.rs  mod.rs  org.rs  query.rs  retention_rules.rs  user.rs
src/rocket_driver/: driver.rs  influx_config.rs  mod.rs
tests/: auth_test.rs  user_tests.rs  write_tests.rs
