[package]
name = "influxdb_rs"
version = "0.1.0"
authors = ["Harry Thomas @infosechoudini"]
description = "InfluxDBv2 Rust driver"
readme = "README.md"
keywords = ["influxdb"]
categories = ["database"]
edition = "2018"
publish = false
license-file = "LICENSE"

[dependencies]
reqwest = { version = "^0.11", default-features = false, features = ["json"] }
serde_json = '^1.0.2'
serde = { version = "^1.0.14", features = ["derive"] }
bytes = "^1"
futures = "^0.3.21"
url = { version = "2.2.2" }
chrono = "0.4.19"
rocket = { version = "0.5.0-rc.2", optional = true }
rocket_db_pools = { version = "0.1.0-rc.2", optional = true }

[dev-dependencies]
tempdir = "0.3"
tokio = { version = "1", features = ["full"] }
url = { version = "2.2.2" }


[features]
# Default reqwest TLS
default = ["reqwest/default-tls"]
# Rocker Driver
rocket_driver = ["rocket_db_pools", "rocket"]
# For using rustls-tls (and no need for openssl anymore)
rustls-tls = ["reqwest/rustls-tls"]
