[package]
name = "influxdb_rs"
version = "0.1.0"
authors = ["Harry Thomas @infosechoudini"]
description = "InfluxDBv2 Rust driver"
readme = "README.md"
keywords = ["influxdb", "driver", "client"]
categories = ["database"]
edition = "2021"
repository = "https://github.com/infosechoudini/influxdb-rs"
publish = true
license-file = "LICENSE"

[dependencies]
reqwest = { version = "^0.11", default-features = false, features = ["json"] }
serde_json = '^1.0.82'
serde = { version = "^1.0.14", features = ["derive"] }
bytes = "^1"
futures = "^0.3.21"
url = { version = "2.2.2" }
chrono = "0.4.19"
rocket = { version = "0.5.0-rc.2", optional = true }
rocket_db_pools = { version = "0.1.0-rc.2", optional = true }

[dev-dependencies]
tempdir = "0.3"
tokio = { version = "1", features = ["full"] }
criterion = { version = "0.3", features = ["async_tokio"] }

[features]
# Rocker Driver
rocket_driver = ["rocket_db_pools", "rocket"]
# For using rustls-tls (and no need for openssl anymore)
# Default is rusttls-tls due to speed Openssl == 60ms vs RustTls == 2ms
default = ["reqwest/rustls-tls"]

[[bench]]
name = "io_bench"
path = "benches/io_bench.rs"
harness = false